--- a/core/templates/core/helpdesk/tickets.html
+++ b/core/templates/core/helpdesk/tickets.html
@@ -31,13 +31,13 @@
   </form>
 
   <div class="ticket-table-wrapper">
-    {% if messages %}
+  <!--  {% if messages %}
       <ul class="messages">
         {% for message in messages %}
           <li class="alert alert-success">{{ message }}</li>
         {% endfor %}
       </ul>
-    {% endif %}
+    {% endif %}-->
 
     <table class="ticket-table">
       <thead>
