--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -210,8 +210,8 @@
 }
 
 .badge-escalated {
-  background-color: #dc3545;
-  color: #000;
+  background-color: #e74c3c;
+  color: white;
 }
 
 .badge-new {
