--- a/static/css/file_list.css
+++ b/static/css/file_list.css
@@ -16,7 +16,7 @@ body {
   font-size: 2.2rem;
   font-weight: 700;
   margin-bottom: 2rem;
-  color: #2563eb;
+  color: #123692;
   letter-spacing: -0.5px;
 }
 
@@ -100,6 +100,8 @@ body {
   grid-template-columns: 2.5fr 1fr 1.2fr 1fr 1.1fr 1fr;
   gap: 1.2rem;
   align-items: center;
+  padding: 0.9rem 1rem;
+  border-top: 1px solid #f1f1f1;
 }
 
 .file-row {
@@ -108,7 +110,7 @@ body {
 }
 
 .file-grid-header {
-  background-color: #2563eb;
+  background-color: #123692;
   color: white;
   font-weight: bold;
   border-top-left-radius: 6px;
@@ -388,14 +390,14 @@ body {
 }
 
 .passcode-modal input:focus {
-  border-color: #007bff;
+  border-color: #123692;
   outline: none;
 }
 
 .passcode-modal button {
   width: 100%;
   padding: 0.8rem;
-  background-color: #007bff;
+  background-color: #123692;
   color: white;
   border: none;
   border-radius: 5px;
@@ -443,6 +445,62 @@ body {
 .passcode-modal .close:hover {
   transform: rotate(45deg);
   color: #333;
+}
+
+/* Styling for the form group */
+.form-group {
+  margin-bottom: 1.5rem;
+}
+
+.form-label {
+  font-size: 1.1rem;
+  font-weight: 600;
+  color: #333;
+}
+
+.form-check {
+  margin-bottom: 1rem;
+  display: flex;
+  align-items: center;
+  font-size: 1rem;
+}
+
+.checkbox-label {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  font-size: 1rem;
+  color: #555;
+}
+
+.form-check-input {
+  width: 20px;
+  height: 20px;
+  margin-right: 0.5rem;
+}
+
+/* Action Buttons */
+.action-buttons {
+  margin-top: 1.5rem;
+}
+
+.btn-reset-passcode {
+  background-color: #007bff;
+  color: white;
+  padding: 15px 15px;
+  font-size: 1rem;
+  border-radius: 5px;
+  border: none;
+  transition: background-color 0.3s ease;
+  margin:2px;
+}
+
+.btn-reset-passcode:hover {
+  background-color: #0056b3;
+}
+
+.btn-reset-passcode:focus {
+  outline: none;
 }
 
 
